# llm-engineering-portfolio

./: .gitattributes  .gitignore  README.md  RETRO.md  requirements.txt  streamlit_app.py
.streamlit/: config.toml
adaptbench-llm/: ARCHITECTURE.md  README.md  pyproject.toml
adaptbench-llm/configs/: bench_v1.yaml
adaptbench-llm/results/: report.md  summary.csv
adaptbench-llm/src/adaptbench/: __init__.py  cache.py  report.py  retriever.py  runner.py  systems.py
adaptbench-llm/tests/: test_adaptbench.py
docs/: index.html  main.js  styles.css
docuquery-gemini/: ARCHITECTURE.md  DEPLOY.md  QA.md  README.md  SECURITY.md  docker-compose.yml
docuquery-gemini/backend/: .env.example  Dockerfile  pyproject.toml
docuquery-gemini/backend/results/: eval.json
docuquery-gemini/backend/src/docuquery/: __init__.py  answer.py  api.py  chunking.py  config.py  db.py  ingest.py  retrieve.py
docuquery-gemini/backend/src/docuquery/eval/: dataset.py  metrics.py  run_eval.py
docuquery-gemini/backend/src/docuquery/providers/: embeddings.py  llm.py
docuquery-gemini/backend/tests/: test_rag.py
docuquery-gemini/frontend/: README.md  package-lock.json  package.json  tailwind.config.ts
docuquery-gemini/frontend/app/: globals.css  layout.tsx  page.tsx
docuquery-gemini/frontend/app/eval/: page.tsx
docuquery-gemini/frontend/components/: Chat.tsx  DocumentSidebar.tsx  Header.tsx  SourcesPanel.tsx  Toast.tsx
docuquery-gemini/frontend/lib/: api.ts
stratcoder-llm/: ARCHITECTURE.md  README.md  SECURITY.md  pyproject.toml
stratcoder-llm/configs/: train_v1.yaml
stratcoder-llm/data/: dataset.jsonl  test.jsonl  train.jsonl  val.jsonl
stratcoder-llm/results/: base_summary.csv  comparison.csv  finetuned_summary.csv  report.md
stratcoder-llm/src/stratcoder/: __init__.py  contract.py  prompts.py
stratcoder-llm/src/stratcoder/data/: generate.py  split.py
stratcoder-llm/src/stratcoder/eval/: metrics.py  report.py  run_eval.py
stratcoder-llm/src/stratcoder/serve/: app.py
stratcoder-llm/src/stratcoder/train/: train_qlora.py
stratcoder-llm/src/stratcoder/validation/: _sandbox_child.py  pipeline.py  sandbox.py  syntax.py
stratcoder-llm/tests/: test_validation.py
workflowlm/: ARCHITECTURE.md  README.md  pyproject.toml
workflowlm/configs/: train_v1.yaml
workflowlm/data/: dataset.jsonl  test.jsonl  train.jsonl  val.jsonl
workflowlm/results/: base_summary.csv  comparison.csv  finetuned_summary.csv  report.md
workflowlm/src/workflowlm/: __init__.py  prompts.py  schema.py
workflowlm/src/workflowlm/data/: generate.py  split.py
workflowlm/src/workflowlm/eval/: metrics.py  report.py  run_eval.py
workflowlm/src/workflowlm/serve/: app.py
workflowlm/src/workflowlm/train/: train_qlora.py
workflowlm/tests/: test_metrics.py  test_schema.py
