[project]
name = "stratcoder"
version = "0.1.0"
description = "QLoRA fine-tuning to generate validated trading-strategy code, checked in a hardened sandbox"
requires-python = ">=3.10,<3.13"
dependencies = [
    "pydantic>=2.6,<3",
    "pyyaml>=6.0",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "pandas>=2.0",
]

[project.optional-dependencies]
# Pinned to the same verified-compatible combo as WorkflowLM (Windows + CUDA 12.4, RTX 4090).
train = [
    "torch==2.6.0",
    "transformers==4.46.3",
    "peft==0.14.0",
    "trl==0.12.2",
    "datasets==3.2.0",
    "accelerate==1.2.1",
    "bitsandbytes==0.49.2; platform_system != 'Darwin'",
]
dev = ["pytest>=8.0", "ruff>=0.5"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/stratcoder"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
