[project]
name = "workflowlm"
version = "0.1.0"
description = "QLoRA fine-tuning to convert NL business processes into schema-validated JSON workflow plans"
requires-python = ">=3.10,<3.13"
dependencies = [
    "pydantic>=2.6,<3",
    "pyyaml>=6.0",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "pandas>=2.0",
]

[project.optional-dependencies]
# Heavy ML stack — installed separately so dataset/schema/eval-scoring work without a GPU.
train = [
    "torch>=2.2",
    "transformers>=4.44",
    "peft>=0.11",
    "trl>=0.9",
    "datasets>=2.19",
    "accelerate>=0.30",
    "bitsandbytes>=0.43; platform_system != 'Darwin'",
]
dev = [
    "pytest>=8.0",
    "ruff>=0.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/workflowlm"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
