[project]
name = "docuquery"
version = "0.1.0"
description = "Gemini-powered RAG with citation traceability and a retrieval-evaluation dashboard"
requires-python = ">=3.10,<3.13"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "pydantic>=2.6,<3",
    "pydantic-settings>=2.2",
    "python-multipart>=0.0.9",
    "numpy>=1.26",
    "psycopg[binary]>=3.1",
    "pgvector>=0.3",
    "pypdf>=4.2",
]

[project.optional-dependencies]
# Local embedding model (default provider). Torch is installed separately (CUDA index).
local = ["sentence-transformers>=3.0"]
# Real Gemini provider (used when GEMINI_API_KEY is set).
gemini = ["google-generativeai>=0.7"]
dev = ["pytest>=8.0", "httpx>=0.27", "ruff>=0.5"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/docuquery"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
